bug fix for guide layout on mobile. fixed image issue

--- a/_sass/layouts/guides.scss
+++ b/_sass/layouts/guides.scss
@@ -4,6 +4,7 @@ div.guide{
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: minmax(100px, auto);
   grid-column-gap: 3.975rem;
+  min-width: 360px;
 //Bottom Shadow Properties
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.6);
   overflow-y: hidden;
