--- a/_sass/layouts/guides_hero.scss
+++ b/_sass/layouts/guides_hero.scss
@@ -1,12 +1,9 @@
 section.hero-container, section.hero-container--guides{
     position: relative;
-    display: flex;
-    justify-content: space-between;
-    grid-column-gap: 10px;
     background-color: #003750;
     box-shadow: -20rem 0 #003750, 40rem 0 #003750;
     margin-bottom: 4rem;
-
+    min-width: 360px;
     h1.col1, h1.title1{
       max-width: max-content;
       width: 67rem;
@@ -31,11 +28,9 @@ section.hero-container, section.hero-container--guides{
     }
 
     .col3{
-      position: relative;
-      right: 0;
       width: 14rem;
       height: 14rem;
-      margin: 0 0 2.5rem 16rem;
+      float: right;
       transform: rotateY(180deg);
     }
   }
